--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,14 @@
         <activity android:name="org.owoTrackVRSync.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <service
             android:label="Tracking Service"
             android:name="org.owoTrackVRSync.TrackingService"
-            android:enabled="true" >
+            android:enabled="true"
+            android:stopWithTask="false">
 
         </service>
     </application>
