--- a/owoTrackWear/src/main/AndroidManifest.xml
+++ b/owoTrackWear/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="org.owoTrack.Wear">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <uses-feature android:name="android.hardware.type.watch" />
 
@@ -25,7 +28,7 @@
             android:value="true" />
 
         <activity
-            android:name=".mainwear"
+            android:name=".MainWear"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -34,6 +37,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:label="Tracking Service"
+            android:name="org.owoTrack.TrackingService"
+            android:enabled="true"
+            android:stopWithTask="false">
+
+        </service>
     </application>
 
 </manifest>
