--- a/owoTrackLib/src/main/AndroidManifest.xml
+++ b/owoTrackLib/src/main/AndroidManifest.xml
@@ -2,4 +2,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.owoTrack">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
