--- a/owoTrackMobile/build.gradle
+++ b/owoTrackMobile/build.gradle
@@ -6,11 +6,11 @@ android {
     compileSdkVersion 31
 
     defaultConfig {
-        applicationId "org.owoTrack.Mobile"
+        applicationId "org.ovrgyrotrackersync"
         minSdkVersion 16
         targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 14
+        versionName "9.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
