Update to version 17

--- a/owoTrackLib/src/main/AndroidManifest.xml
+++ b/owoTrackLib/src/main/AndroidManifest.xml
@@ -3,4 +3,6 @@
     package="org.owoTrack">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
 </manifest>
