--- a/owoTrackWear/src/main/AndroidManifest.xml
+++ b/owoTrackWear/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-feature android:name="android.hardware.type.watch" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
