Update gradle, gradle plugin, sdk version to 33

--- a/owoTrackLib/build.gradle
+++ b/owoTrackLib/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdk 33
+    namespace "org.owoTrack"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 20
         versionName '9.8'
 
