--- a/owoTrackMobile/build.gradle
+++ b/owoTrackMobile/build.gradle
@@ -3,12 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdk 33
+    namespace "org.owoTrack.Mobile"
 
     defaultConfig {
         applicationId "org.ovrgyrotrackersync"
         minSdkVersion 16
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 20
         versionName "9.8"
 
