--- a/owoTrackWear/build.gradle
+++ b/owoTrackWear/build.gradle
@@ -3,12 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdk 33
+    namespace "org.owoTrack.Wear"
 
     defaultConfig {
         applicationId "org.ovrgyrotrackersync"
         minSdkVersion 25
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 120
         versionName "9.8"
 
